--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "shadow-cljs": "^2.14.3"
   },
   "dependencies": {
+    "antd": "4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
