--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "devDependencies": {
-    "shadow-cljs": "^2.14.3"
-  },
+  "name": "timetable-builder",
+  "version": "2.0.0",
   "dependencies": {
-    "antd": "4.17.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "antd": "4.17.2",
+    "shadow-cljs": "^2.23.3"
   }
 }
